Working minus validering...

--- a/Opgave11_2020/Opgave11_2020.csproj
+++ b/Opgave11_2020/Opgave11_2020.csproj
@@ -6,4 +6,8 @@
 
 
 
+  <ItemGroup>
+    <Folder Include="Views\GetFormInput\" />
+    <Folder Include="Views\ShowFormInput\" />
+  </ItemGroup>
 </Project>
